<resources>
    <string name="app_name">DocumentCenterApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="user">User</string>
    <string name="use_touch_id">Use Touch ID</string>
    <string name="remember_me">Remember me</string>
    <string name="when_touch_id_is_enable">When Touch ID is enable, you can sign in using any fingerprints stored in the device.</string>
    <string name="forgot_password">Forgotten your detail?</string>
    <string name="signin">SIGN IN</string>
    <string name="version">Version 1.02</string>
    <string name="switch_user">Switch User</string>
    <string name="remember_to_keep_your_devices">Remember to keep your devices and personal information safe.</string>
    <string name="txt_submit_C">Submit</string>
    <string name="no_username_and_password">Please enter username and password.</string>
    <string name="no_email">Please enter email.</string>
    <string name="no_username">Please enter username.</string>
    <string name="invalid_email">Please enter valid email.</string>
    <string name="txt_alert_C">Alert</string>
    <string name="no_internet">The internet connection appears to be offline.</string>
    <string name="txt_forgot_password_C">Forgot Password</string>
    <string name="home">Files</string>
    <string name="upload_download">Upload / Download</string>
    <string name="setting">Setting</string>
    <string name="chinese">简体中文</string>
    <string name="english_australia">English(Australia)</string>
    <string name="english">English</string>
    <string name="upload_list">Upload List</string>
    <string name="download_list">Download List</string>
    <string name="sure_want_to_delete">The file will be deleted permanently confirm delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="test">Test</string>
</resources>
