<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_screen_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:elevation="@dimen/font_size_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_primary"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_30"
                android:text="@string/txt_forgot_password_C"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/font_size_30"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.12" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.76"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_20"
                    android:background="@drawable/drawable_edit_box_multiline"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="@dimen/view_padding_5"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/view_padding_8"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_small" />


                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_20"
                    android:background="@drawable/rounded_corner_yellow_bg"
                    android:gravity="center"
                    android:padding="@dimen/view_padding_8"
                    android:text="@string/txt_submit_C"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.12" />


    </LinearLayout>

</LinearLayout>

