<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_layout"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/message1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="@string/sure_want_to_delete"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/message2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingBottom="10dp"
                    android:paddingLeft="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/status_closed_color"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="normal"
                        android:theme="@style/LogoutButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/status_closed_color"
                        android:text="@string/delete"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="normal"
                        android:theme="@style/LogoutButton" />

                </LinearLayout>
            </LinearLayout>


            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:gravity="right"
                 android:padding="@dimen/padding_xsmall" >

                 <Button
                     android:id="@+id/btn1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:background="@color/green_btn"
                     android:paddingBottom="15dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
                     android:paddingTop="15dp"
                     android:text="@string/no_thanks"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_18"
                     android:textStyle="bold" />

                 <Button
                     android:id="@+id/btn2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/dark_red"
                     android:paddingBottom="15dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
                     android:paddingTop="15dp"
                     android:text="@string/yes_please"
                     android:textColor="@color/white"
             </LinearLayout>-->

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>