<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Language"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="Done"
                android:textColor="@color/gray"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/title_color"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/search_icon"
            android:ems="10"
            android:hint="Search" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:visibility="gone"
            android:textColor="@color/green_notification"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@color/list_click_end"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_check_english"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/check_right_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_english_australia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english_australia"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English(Australia)"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@color/list_click_end"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_check_english_australia"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/check_right_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chinese, Simplifies"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@color/list_click_end"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_check_chinese"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/check_right_icon" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>